# cnese

./: .gitignore  Cargo.toml  README.md  TODO
data/: branch_test.asm  break_test.asm  cmp_test.asm  interrupt_test.asm  jsr_test.asm  overflow_test.asm  penalty_test.asm  sta_test.asm  sta_test_bin  test.asm
src/: main.rs
src/cpu/: addressing.rs  cpu.rs  cpu_6502.rs  databus.rs  instruction.rs  mod.rs  state.rs
src/gfx/: main.rs  mod.rs  palette.rs  render.rs
src/gfx/ui/: font.rs  mod.rs
src/gfx/ui/window/: debug.rs  mod.rs  patterntable.rs  ppu_framebuffer.rs  window.rs
src/nes/: databus.rs  ines.rs  mod.rs  nes.rs
src/nes/cartridge/: cartridge.rs  frogrom.rs  mod.rs  nrom.rs
src/ppu/: mod.rs  nametable.rs  ppu.rs  register.rs
src/ui/: debug.rs  font.rs  main.rs  mod.rs  util.rs
src/ui/resources/: nesfont.fon
src/ui/window/: debug.rs  mod.rs  window.rs
src/util/: file.rs
