[package]
name = "cnese"
version = "0.1.0"
authors = ["Adam Andersson <geheaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["ttf"]
